Mon Dec 20 14:07:02 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/multi-tk.rb: supports new features of Tcl/Tk8.5a2

	* ext/tk/lib/tk/clock.rb: ditto

	* ext/tk/lib/tk/text.rb: ditto

	* ext/tk/lib/tk/panedwindow.rb: ditto

Mon Dec 20 10:51:58 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (special_local_set): prevent the parser object from GC.
	  fixed: [ruby-dev:25252]

Mon Dec 20 03:30:40 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/cgi/session.rb (CGI::Session#initialize): empty session id was
	  used if request had no session key.  fixed: [ruby-core:03981]

Mon Dec 20 00:16:54 2004  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/encodings/SHIFT_JIS.rb: fixed LoadError bug.
	  [ruby-core:3958]

Sun Dec 19 17:24:59 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (enable_rpath): use rpath flag to embed the library
	  path into extensions on ELF environment.  [ruby-dev:25035]

Sun Dec 19 11:01:25 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit.rb: use standalone runner for -e.

	* lib/test/unit/autorunner.rb (Test::Unit::AutoRunner#options): accept
	  multiple -p and -x options.

	* lib/test/unit/collector/dir.rb (Test::Unit::Collector::Dir#recursive_collect):
	  ditto.

Sat Dec 18 16:36:23 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/zlib/zlib.c (rb_deflate_s_deflate, rb_inflate_s_inflate):
	  disallow interrupt by type conversion.  fixed: [ruby-dev:25226]

Sat Dec 18 15:09:02 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* lib/webrick/httpauth.rb,
	  lib/webrick/httpauth/{basicauth.rb,digestauth.rb}: use
	  pack/unpack-template char "m" instead of lib/base64.rb to do base64
	  encoding/decoding.

Fri Dec 17 16:44:26 2004  Tanaka Akira  <akr@m17n.org>

	* configure.in (ac_cv_sizeof_rlim_t): set 8 for BSD/OS.
	  Reported by OHARA Shigeki.  [ruby-dev:25236]

Fri Dec 17 16:28:12 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix bug on setting up system encoding
